Add product catalog styling
